# pcb-jigify

./: .gitignore  README.md  jig.py  pyproject.toml  settings.py
pcb_jigify/: cli.py  settings.py
pcb_jigify/jigs/: base.py  holding.py  settings.py  testing.py
